Bug 451814 - Task manager badge should not count events from channels where notifications are disabled
Summary: Task manager badge should not count events from channels where notifications ...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.9.220380
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-23 07:10 UTC by Antonio Rojas
Modified: 2022-03-24 21:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-03-23 07:10:26 UTC
In 22.04 beta, Konversation started displaying meaningless numbers in a badge in its taskbar item. I would expect this to indicate the number of unread messages, or highlights, or something similar, but it seems no have no correlation with any of these: the number increases for apparently no reason, doesn't change when a highlight or ping is received, and never decreases (until the application is restarted) even if all channels and messages are marked as read.
Comment 1 Antonio Rojas 2022-03-23 07:46:29 UTC
Just found out there is a configuration module for this: the unexplained notifications come from the "Current nick used" item.
Comment 2 Antonio Rojas 2022-03-24 17:47:51 UTC
Found the issue, these numbers are coming from a channel which has notifications disabled
Comment 3 Bug Janitor Service 2022-03-24 17:59:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/74
Comment 4 Antonio Rojas 2022-03-24 21:17:36 UTC
Git commit e0a176f8ad58f8c6019df6395c4a0901fa8a7d92 by Antonio Rojas.
Committed on 24/03/2022 at 21:13.
Pushed by arojas into branch 'release/22.04'.

Task manager badge: ignore events from channels with disabled notifications

Getting notified (one way or another) about events on channels for which the user has explicitly disabled notifications seems counter-intuitive

M  +3    -3    src/viewer/chatwindow.cpp

https://invent.kde.org/network/konversation/commit/e0a176f8ad58f8c6019df6395c4a0901fa8a7d92