Task manager badge: ignore events from channels with disabled notifications

Getting notified (one way or another) about events on channels for which the user has explicitly disabled notifications seems counter-intuitive

BUG: 451814